--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximal-scale=1">
     <link rel="stylesheet" href="lib/bootstrap.min.css">
     <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/login.animation.css">
 
     <title>Etu'made - Oser créer</title>
   </head>
@@ -15,7 +17,9 @@
   			<div class="container">
   				<div class="navbar-header">
   					<a class="pull-left visible-md visible-lg">
-  						<div id="logo-navbar" alt="Etu'Made"></div>
+  						<div id="logo-navbar" alt="Etu'Made" class="pull-left">
+                <!-- <img src="images/etumade_logo.png" alt="Etu'Made" width="50px" height="50px"> -->
+              </div>
   					</a>
 
             <div class="navbar-brand">
@@ -35,8 +39,13 @@
 
   		        <div id="collapsable-nav" class="collapse navbar-collapse">
   		           <ul id="nav-list" class="nav navbar-nav navbar-right">
-  		            <li id="navLogButton">
+  		            <li id="navLogButton" class="dropdown">
   		              <a>SE CONNECTER</a>
+                    <ul id="login" class="dropdown-menu">
+                      <li><input type="text" name="login" placeholder="login" value=""></li>
+                      <li><input type="password" name="password" placeholder="password" value=""></li>
+                      <li><button type="button" name="button">Connexion</button></li>
+                    </ul>
   		            </li>
   		            <li id="navProjectsButton">
   		              <a>PROJETS</a>
